fix z-index with layout dropdown

--- a/src/portal/content/less/app/dashboard.less
+++ b/src/portal/content/less/app/dashboard.less
@@ -665,6 +665,8 @@ button.md-button.dashboard-button-set-button {
   //background: #f2f2f2;
   background: #fff;
   //padding: 10px;
+  z-index: 1;
+  position: relative;
 }
 
 .dashboard-accordion-component {
